--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   
     <div class="description">
-        <span>JANJIKUUUU</span>
+        <span>semogaaa kamuu sukaaaaaa</span>
     </div>
     <div class="button">
         <button>
